SPA/examples/negative/test1N.c
int main(void){
        int j = 42;
        int i = 0;
        j = i++;
        return j;
}
